<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_splash">

    <fragment
        android:id="@+id/nav_splash"
        android:name="com.example.placemate.ui.splash.SplashFragment"
        android:label="PlaceMate"
        tools:layout="@layout/fragment_onboarding">
        <action
            android:id="@+id/action_splash_to_onboarding"
            app:destination="@id/nav_onboarding"
            app:popUpTo="@id/nav_splash"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_splash_to_home"
            app:destination="@id/nav_home"
            app:popUpTo="@id/nav_splash"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/nav_onboarding"
        android:name="com.example.placemate.ui.onboarding.OnboardingFragment"
        android:label="Welcome"
        tools:layout="@layout/fragment_onboarding">
        <action
            android:id="@+id/action_onboarding_to_home"
            app:destination="@id/nav_home"
            app:popUpTo="@id/nav_onboarding"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_onboarding_to_settings"
            app:destination="@id/nav_settings"
            app:popUpTo="@id/nav_onboarding"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.placemate.ui.home.HomeFragment"
        android:label="Dashboard"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_inventory"
        android:name="com.example.placemate.ui.inventory.InventoryFragment"
        android:label="@string/menu_inventory"
        tools:layout="@layout/fragment_inventory" />


    <fragment
        android:id="@+id/nav_taken_items"
        android:name="com.example.placemate.ui.taken.TakenItemsFragment"
        android:label="@string/menu_taken_items"
        tools:layout="@layout/fragment_taken_items" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.placemate.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_add_item"
        android:name="com.example.placemate.ui.inventory.AddItemFragment"
        android:label="@string/title_add_item"
        tools:layout="@layout/fragment_add_item" />

    <fragment
        android:id="@+id/nav_item_detail"
        android:name="com.example.placemate.ui.inventory.ItemDetailFragment"
        android:label="@string/title_item_detail"
        tools:layout="@layout/fragment_item_detail">
        <argument
            android:name="itemId"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_omni_search"
        android:name="com.example.placemate.ui.search.OmniSearchFragment"
        android:label="OmniSearch"
        tools:layout="@layout/fragment_omni_search" />

    <fragment
        android:id="@+id/nav_sentinel"
        android:name="com.example.placemate.ui.sentinel.SentinelFragment"
        android:label="@string/title_sentinel"
        tools:layout="@layout/fragment_sentinel" />

</navigation>